--- a/mydrtv/src/app/profile/profile.component.html
+++ b/mydrtv/src/app/profile/profile.component.html
@@ -8,6 +8,8 @@
     </div>
 
     <div class="col-6">
+
+      <h2>Account data</h2>
       
       <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
       
@@ -62,5 +64,88 @@
     </div>
 
   </div>
+</div>
+
+<div class="container">
+
+  <div class="row">
+
+    <div class="col-12">
+
+      <h2>Privacy settings</h2>
+
+      <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+      
+        <div class="form-group">
+          <legend>Who should see your profile?</legend>
+
+          <div class="form-check row">
+              <input class="form-check-input" type="radio" name="available" id="public" value="public" checked>
+              <label class="form-check-label" for="public">
+                public
+              </label>
+          </div>
+          <div class="form-check row">
+              <input class="form-check-input" type="radio" name="available" id="private" value="private">
+              <label class="form-check-label" for="private">
+                private
+              </label>
+          </div>
+        </div>
+
+        <div class="form-group">
+            <legend>Manage what emails you get</legend>
+  
+            <div class="form-check row">
+                <input class="form-check-input" type="radio" name="manageEmails" id="marketingEmails" value="marketingEmails" checked>
+                <label class="form-check-label" for="marketingEmails">
+                  marketing emails with the latest deals
+                </label>
+            </div>
+            <div class="form-check row">
+                <input class="form-check-input" type="radio" name="manageEmails" id="newsEmails" value="newsEmails">
+                <label class="form-check-label" for="newsEmails">
+                  new features and movies
+                </label>
+            </div>
+            <div class="form-check row">
+                <input class="form-check-input" type="radio" name="manageEmails" id="minimalEmails" value="minimalEmails">
+                <label class="form-check-label" for="minimalEmails">
+                  only account and payment related (necessary for your account)
+                </label>
+            </div>
+        </div>
+
+        <button class="btn btn-primary" id="savePrivacyButton">Save</button>
+        
+        </form>
+    </div>
+
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+
+      <div><p>See and manage your activity log HERE.</p></div>
+
+      <div><p>Your data is collected in compliance to GDPR, you can read more about it in the Terms of Service and Privacy Policy</p></div>
+
+      <div>
+        <p><strong>Do you have a question? Contact us:</strong></p>
+        <p>Bit's and Bytes ApS<br>
+        contact@mydrtv.com<br>
+        Tel +45 / 00 00 00 00<br>
+        Lygten 37<br>
+        Copenhagen N 2400<br>
+        CVR: XXXXXXXXXX</p>
+      </div>
+
+    </div>
+
+  </div>
+
+
 </div>
 
