--- a/mydrtv/src/app/profile/profile.component.scss
+++ b/mydrtv/src/app/profile/profile.component.scss
@@ -56,9 +56,9 @@ select, option {
     color: $lightWhite!important;
   }
   
-  .btn-primary:hover {
-    background-color: $main!important;
-  }
+.btn-primary:hover {
+background-color: $main!important;
+}
 
 .divDeleteUser{
     text-align: center;
@@ -75,4 +75,8 @@ select, option {
 
 #deleteButton:hover {
     color: red;
+}
+
+#savePrivacyButton {
+    position: relative;
 }
