--- a/mydrtv/src/app/profile/profile.component.scss
+++ b/mydrtv/src/app/profile/profile.component.scss
@@ -5,7 +5,7 @@ $main: #32b859;
 
 .container {
     margin-top: 40px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #6e757c;
     padding-bottom: 60px
 }
 
@@ -106,7 +106,7 @@ legend {
 }
 
 .manage div p, .manage div p strong  {
-    color: gray;
+    color: #6e757c;
     font-size: 13px!important;
     text-align: center;
 }
