--- a/mydrtv/src/app/profile/profile.component.html
+++ b/mydrtv/src/app/profile/profile.component.html
@@ -121,7 +121,7 @@
 
     <div class="col-5 manage">
 
-      <div><p>See and manage your activity log <a id="activityButton" routerLink="/" routerLinkActive="active">here</a>.</p></div>
+      <div><p>See and manage your activity log <a id="activityButton" routerLink="activityLog" routerLinkActive="active">here</a>.</p></div>
 
       <div><p>Your data is collected in compliance to GDPR, you can read more about it in the <a id="policyButton" routerLink="privacyPolicy" routerLinkActive="active">Terms of Service and Privacy Policy</a>.</p></div>
 
