--- a/mydrtv/src/app/login/login.component.html
+++ b/mydrtv/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" (ngSubmit)="Login()">
   <h2>Login</h2>
   
     <input placeholder="E-mail" type="text" formControlName="email" id="txtEmailLogin" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
