--- a/mydrtv/src/app/profile/profile.component.html
+++ b/mydrtv/src/app/profile/profile.component.html
@@ -4,7 +4,8 @@
   <div class="row">
 
     <div class="col-4">
-        <img class="profile-img" src="http://www.vincegolangco.com/wp-content/uploads/2010/12/batman-for-facebook.jpg" alt="default-profile-image">
+      <div *ngIf="currentUser.Gender == 'M'"><img class="profile-img" src="../../assets/default-man.jpg"></div>
+      <div *ngIf="currentUser.Gender == 'F'"><img class="profile-img" src="../../assets/default-woman.jpg"></div>
     </div>
 
     <div class="col-6">
