--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
         <!-- Logged in -->
         <li class="dropdown order-1" *ngIf="this.authService.isLoggedIn()">
-          <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">{{ userName }} <span class="caret"></span></button>
+          <button type="button" id="dropdownMenu1" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">{{ currentUser$.Name }} <span class="caret"></span></button>
           <ul class="dropdown-menu dropdown-menu-right mt-2" id="name">
             <li class="px-3">
               <div class="form-group">
