we nailed it. We are awesome!

--- a/mydrtv/src/app/profile/profile.component.html
+++ b/mydrtv/src/app/profile/profile.component.html
@@ -4,8 +4,8 @@
   <div class="row">
 
     <div class="col-4">
-      <div *ngIf="currentUser.Gender == 'M'"><img class="profile-img" src="../../assets/default-man.jpg"></div>
-      <div *ngIf="currentUser.Gender == 'F'"><img class="profile-img" src="../../assets/default-woman.jpg"></div>
+      <div *ngIf="gender == 'M'"><img class="profile-img" src="../../assets/default-man.jpg"></div>
+      <div *ngIf="gender == 'F'"><img class="profile-img" src="../../assets/default-woman.jpg"></div>
     </div>
 
     <div class="col-6">
