fixed navbar disappearing

--- a/mydrtv/src/app/app.component.html
+++ b/mydrtv/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar *ngIf="globals.hideNavBar === false"></app-navbar>
+<app-navbar *ngIf="showNavBar == false "></app-navbar>
 <router-outlet></router-outlet>
 
 
