--- a/mydrtv/src/app/members/members.component.html
+++ b/mydrtv/src/app/members/members.component.html
@@ -8,8 +8,8 @@
           <div *ngIf="user.Gender == 'F'"><img src="../../assets/default-woman.jpg"></div>
         </div>
         <div class="col-9">
-          <div id="name">{{user.Name}}</div>
-          <div>{{user.Email}}</div>
+          <div id="name">{{userName}}</div>
+          <div>{{userEmail}}</div>
           <div *ngIf="user.Gender == 'M'" class="gender"><div>Male</div></div>
           <div *ngIf="user.Gender == 'F'" class="gender"><div>Female</div></div>
         </div>
